# hal-simplicity

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
hal_simplicity/src/: lib.rs
hal_simplicity/src/cmd/: address.rs  block.rs  mod.rs  tx.rs
hal_simplicity/src/cmd/simplicity/: info.rs  sighash.rs
hal_simplicity_app/src/: main.rs
hal_simplicity_py/src/: lib.rs
pyhalsimplicity/: Cargo.toml
pyhalsimplicity/src/: lib.rs
python/: main.py
